Fixed button for hover styling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <div class="info">
                 <h1>I have bad news for you</h1>
                 <p>The page you are looking for might be removed or is temporarily unavailable</p>
-                <div class="button">
-                    <a href="#">Back to homepage</a>
-                </div>
+                <a href="#" class="button">Back to homepage</a>
             </div>
         </div>
         <div class="footer">
